# tauri-plugin-serialport-en

./: .gitignore  Cargo.toml  build.rs  flake.nix  package.json
.changes/: en-translation.md
examples/svelte-app/src/: App.svelte
src/: command.rs  lib.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
